@@ -8418,6 +8418,22 @@ pixels will slow things down on a large logo.
 This filter uses the repeat_field flag from the Video ES headers and hard repeats
 fields based on its value.
 
+@section reverse
+
+Reverse a clip.
+
+Warning: This iflter qequires memory to buffer the entire clip, so trimming is suggested.
+
+@subsection Examples
+
+@itemize
+@item
+Take the first 5 seconds of a clip, and reverse it.
+@example
+trim=end=5,reverse
+@end example
+@end itemize
+
 @section rotate
 
 Rotate video by an arbitrary angle expressed in radians.
